k8s-configuration/telegram.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: telegram-deployment
    labels:
        app: telegram
spec:
    replicas: 1
    selector:
        matchLabels:
            app: telegram
    template:
        metadata:
            labels:
                app: telegram
        spec:
            containers:
            - name: telegram
              image: tradecalls/telegram:v
