k8s-configuration/api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
    labels:
        app: apiserver
spec:
    replicas: 1
    selector:
        matchLabels:
            app: apiserver
    template:
        metadata:
            labels:
                app: apiserver
        spec:
            containers:
            - name: apiserver
              image: marcosfelipp/trade-calls-api:v0.1.3
              ports:
                - containerPort: 5000
              imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
    name: api-service
spec:
    selector:
        app: apiserver
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 5000
          targetPort: 5000
          nodePort: 30000
