k8s-configuration/rabbitmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq-deployment
    labels:
        app: rabbitmq
spec:
    replicas: 1
    selector:
        matchLabels:
            app: rabbitmq
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
            - name: rabbitmq
              image: rabbitmq:3-management
              ports:
                - containerPort: 15672
                - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq-service
spec:
    selector:
        app: rabbitmq
    ports:
        - name: port1
          protocol: TCP
          port: 15672
          targetPort: 15672
        - name: port2
          protocol: TCP
          port: 5672
          targetPort: 5672
